--- a/项目进度.md
+++ b/项目进度.md
@@ -1,1 +1,5 @@
-
+##谷子数据库
+####2016-12-28
+******
+>1、表型性状：替换根茎叶穗花籽粒的图片<br />	修改目录： /appstatic/millet/assets/img/search<br />
+>2、基因序列:替换谷子植株图片，并修改相关的html代码	<br />  修改目录：/appstatic/millet/assets/img/Chromosome;<br />修改文件：/pyweb/millet/website/millet/templates/genesequence.html<br />
