--- a/项目进度.md
+++ b/项目进度.md
@@ -1,3 +1,28 @@
+##谷子数据库
+
+2016-12-28
+>  1、表型性状：替换根茎叶穗花籽粒的图片<br />	修改目录： /appstatic/millet/assets/img/search<br />
+>  2、基因序列:替换谷子植株图片，并修改相关的html代码	<br />  修改目录：/appstatic/millet/assets/img/Chromosome;<br />修改文件：/pyweb/millet/website/millet/templates/genesequence.html
+
+<br /><br />
+
+##数据库网站LOGO&UI
+
+2017-01-05
+> 协助张贞波修改Logo：介绍网站内容及生物相关名词和技术，如BLAST
+
+2017-01-03
+>收集、汇总Logo意见、建义，提供给张贞波作为Logo修改的参照
+
+2016-12-29
+>完成第一版Logo设计，等待反馈意见
+
+2016-12-23
+>对第一版已经设计了的Logo给出部分建议。PS:第一版还有两个网站的Logo没有设计
+
+2016-12-01
+>联系张贞波讨论数据中心所有数据库网站UI和Logo改版问题
+
 
 
 
